<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="org.groupmanager.team.groupmanager_client.CreateAccountActivity" >

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/email_hint"
        android:textColorHint="#ffc9bfcc"
        android:textColor="#ffe7ffe9"
        android:textSize="30dp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/new_fist_name_hint"
        android:textColorHint="#ffc9bfcc"
        android:textSize="30dp"
        android:textColor="#ffe7ffe9">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/new_last_name_hint"
        android:textColorHint="#ffc9bfcc"
        android:textSize="30dp"
        android:textColor="#ffe7ffe9">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:textColorHint="#ffc9bfcc"
        android:textColor="#ffe7ffe9"
        android:textSize="30dp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/retypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/retype_password_hint"
        android:textColorHint="#ffc9bfcc"
        android:textSize="30dp"
        android:textColor="#ffe7ffe9">
        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:background="@android:color/transparent"
        android:layout_marginTop="30dp"
        android:src="@drawable/create_accountx" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>